--- a/index.html
+++ b/index.html
@@ -12,84 +12,91 @@
     <title>Moon Cake Recipe</title>
 </head>
 <body>
-    <header>
-        <h1>Easy Recipe For</h1>
-        <h1>Mooncake</h1>
-        <p>Traditional Chinese mooncake with lotus paste and salted egg yolk.</p>
-    </header>
-    <img src="https://images.twinkl.co.uk/tr/image/upload/illustation/mooncake-bw-rgb.png" alt="Mooncake Illustration">
-    <section class="content">
-        <div class="ingredients">
-            <h2>Ingredients</h2>
-            <ul>
-                <h3>Dough</h3>
-                <li>60g golden syrup</li>
-                <li>1/4 tsp lye water (kansui)</li>
-                <li>24g vegetable oil</li>
-                <li>100g cake flour</li>
-            </ul>
-            <h2>Filling</h2>
-            <ul>
-                <li>10 salted egg yolk</li>
-                <li>220g store-bought lotus paste (See note)</li>
-                <li>Egg wash to brush the mooncake</li>
-            </ul>
-        </div>
-        <div class="information">
-            <div class="times">
-                <div class="prep-time">
-                    <h3>Prep Time</h3>
-                    <p>20 minutes</p>
-                </div>
-                <div class="cook-time">
-                    <h3>Cook Time</h3>
-                    <p>20 minutes</p>
-                </div>
-                <div class="total-time">
-                    <h3>Total Time</h3>
-                    <p>40 minutes</p>
-                </div>
+    <main>
+        <header>
+            <h1>Easy Recipe For</h1>
+            <h1>Mooncake</h1>
+            <p>Traditional Chinese mooncake with lotus paste and salted egg yolk.</p>
+        </header>
+        <img src="https://images.twinkl.co.uk/tr/image/upload/illustation/mooncake-bw-rgb.png" alt="Mooncake Illustration">
+        <section class="content">
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <h3>Dough</h3>
+                    <li>60g golden syrup</li>
+                    <li>1/4 tsp lye water (kansui)</li>
+                    <li>24g vegetable oil</li>
+                    <li>100g cake flour</li>
+                </ul>
+                <h2>Filling</h2>
+                <ul>
+                    <li>10 salted egg yolk</li>
+                    <li>220g store-bought lotus paste (See note)</li>
+                    <li>Egg wash to brush the mooncake</li>
+                </ul>
             </div>
-            <div class="instructions">
-                <h2>Instructions</h2>
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <h3>For the dough:</h3>
-                        <p> <span>1.</span> Mix golden syrup, lye water, and vegetable oil accurately in a mixing bowl. 
-                            <span>2.</span> Sieve the flour. Add all at once to the above mixture. 
-                            <span>3.</span> Combine all the ingredients. 
-                            <span>4.</span> Place the dough on a piece of cling wrap. Refrigerate for thirty minutes to let the dough relax. 
-                        </p>
-                      </div>
-                      <div class="carousel-item">
-                        <h3>For the filling:</h3>
-                        <p> <span>1.</span> Wash the salted egg yolk with water to remove the white sticking to the yolk. Pat dry. 
-                            <span>2.</span> Wrap the yolk with the lotus paste. 
-                            <span>3.</span> Then roll it into a ball. Set aside.  
-                        </p>
-                      </div>
-                      <div class="carousel-item">
-                        <h3>Wrapping</h3>
-                        <p> <span>1.</span> Roll out the pastry in between two plastic sheets or cling wraps. 
-                            <span>2.</span> Remove the cling film on top, fold the pastry toward the filling.
-                            <span>3.</span> Pinch away the excess pastry where the pastry is double folded to ensure consistent thickness. 
-                            <span>4.</span> Roll the mooncake with your palms to form a ball. 
-                        </p>
-                      </div>
+            <div class="information">
+                <div class="times">
+                    <div class="prep-time">
+                        <h3>Prep Time</h3>
+                        <p>20 minutes</p>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+                    <div class="cook-time">
+                        <h3>Cook Time</h3>
+                        <p>20 minutes</p>
+                    </div>
+                    <div class="total-time">
+                        <h3>Total Time</h3>
+                        <p>40 minutes</p>
+                    </div>
+                </div>
+                <div class="instructions">
+                    <h2>Instructions</h2>
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <h3>For the dough:</h3>
+                            <p> <span>1.</span> Mix golden syrup, lye water, and vegetable oil accurately in a mixing bowl. 
+                                <span>2.</span> Sieve the flour. Add all at once to the above mixture. 
+                                <span>3.</span> Combine all the ingredients. 
+                                <span>4.</span> Place the dough on a piece of cling wrap. Refrigerate for thirty minutes to let the dough relax. 
+                            </p>
+                          </div>
+                          <div class="carousel-item">
+                            <h3>For the filling:</h3>
+                            <p> <span>1.</span> Wash the salted egg yolk with water to remove the white sticking to the yolk. Pat dry. 
+                                <span>2.</span> Wrap the yolk with the lotus paste. 
+                                <span>3.</span> Then roll it into a ball. Set aside.  
+                            </p>
+                          </div>
+                          <div class="carousel-item">
+                            <h3>Wrapping</h3>
+                            <p> <span>1.</span> Roll out the pastry in between two plastic sheets or cling wraps. 
+                                <span>2.</span> Remove the cling film on top, fold the pastry toward the filling.
+                                <span>3.</span> Pinch away the excess pastry where the pastry is double folded to ensure consistent thickness. 
+                                <span>4.</span> Roll the mooncake with your palms to form a ball. 
+                            </p>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <footer>
+            <p>Developed by Kristine de Jesus</p>
+        </footer>
+    </main>
+    
 
 
     <!-- JavaScript Bootstrap -->
