--- a/index.html
+++ b/index.html
@@ -14,69 +14,79 @@
 <body>
     <main>
         <header>
-            <h1>Easy Recipe For</h1>
-            <h1>Mooncake</h1>
-            <p>Traditional Chinese mooncake with lotus paste and salted egg yolk.</p>
+            <h1 class="border-solid small-header">Easy Recipe For</h1>
+            <h1 class="border-solid">Mooncake</h1>
+            <p class="border-solid mb-0">Traditional Chinese mooncake with lotus paste and salted egg yolk. 
+                Mooncake is the indispensable Chinese dessert served during the mid-autumn festival 
+                which falls on the 15th of August of the Chinese lunar calendar.
+            </p>
         </header>
-        <img src="https://images.twinkl.co.uk/tr/image/upload/illustation/mooncake-bw-rgb.png" alt="Mooncake Illustration">
+        <div class="mooncake-img">
+            <img src="https://thumbs.dreamstime.com/b/delicious-mooncake-mid-autumn-food-black-white-delicious-mooncake-mid-autumn-food-isometric-cartoon-vector-illustration-155954739.jpg" alt="Mooncake Illustration">
+        </div>
         <section class="content">
-            <div class="ingredients">
-                <h2>Ingredients</h2>
-                <ul>
-                    <h3>Dough</h3>
-                    <li>60g golden syrup</li>
-                    <li>1/4 tsp lye water (kansui)</li>
-                    <li>24g vegetable oil</li>
-                    <li>100g cake flour</li>
-                </ul>
-                <h2>Filling</h2>
-                <ul>
-                    <li>10 salted egg yolk</li>
-                    <li>220g store-bought lotus paste (See note)</li>
-                    <li>Egg wash to brush the mooncake</li>
-                </ul>
+            <div class="content-wrapper">
+                <h2 class="border-solid">Ingredients</h2>
+                <div class="ingredients border-solid">
+                    <h2>Dough</h2>
+                    <ul>
+                        <li>60g golden syrup</li>
+                        <li>1/4 tsp lye water (kansui)</li>
+                        <li>24g vegetable oil</li>
+                        <li>100g cake flour</li>
+                    </ul>
+                    <h2>Filling</h2>
+                    <ul>
+                        <li>10 salted egg yolk</li>
+                        <li>220g store-bought lotus paste (See note)</li>
+                        <li>Egg wash to brush the mooncake</li>
+                    </ul>
+                </div>
             </div>
             <div class="information">
                 <div class="times">
-                    <div class="prep-time">
+                    <div class="prep-time border-solid">
                         <h3>Prep Time</h3>
                         <p>20 minutes</p>
                     </div>
-                    <div class="cook-time">
+                    <div class="cook-time border-solid">
                         <h3>Cook Time</h3>
                         <p>20 minutes</p>
                     </div>
-                    <div class="total-time">
+                    <div class="total-time border-solid">
                         <h3>Total Time</h3>
                         <p>40 minutes</p>
                     </div>
                 </div>
                 <div class="instructions">
-                    <h2>Instructions</h2>
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <h2 class="border-solid">Instructions</h2>
+                    <div id="carouselExampleControls" class="carousel carousel-dark slide border-solid" data-bs-ride="false">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
+                          <div class="carousel-item active container-fluid">
                             <h3>For the dough:</h3>
-                            <p> <span>1.</span> Mix golden syrup, lye water, and vegetable oil accurately in a mixing bowl. 
-                                <span>2.</span> Sieve the flour. Add all at once to the above mixture. 
-                                <span>3.</span> Combine all the ingredients. 
-                                <span>4.</span> Place the dough on a piece of cling wrap. Refrigerate for thirty minutes to let the dough relax. 
-                            </p>
+                            <div class="list-instructions"> 
+                                <p><span>1.</span> Mix golden syrup, lye water, and vegetable oil accurately in a mixing bowl. </p>
+                                <p><span>2.</span> Sieve the flour. Add all at once to the above mixture. </p>
+                                <p><span>3.</span> Combine all the ingredients. </p>
+                                <p><span>4.</span> Place the dough on a piece of cling wrap. Refrigerate for thirty minutes to let the dough relax. </p>
+                            </div>
                           </div>
-                          <div class="carousel-item">
+                          <div class="carousel-item container-fluid">
                             <h3>For the filling:</h3>
-                            <p> <span>1.</span> Wash the salted egg yolk with water to remove the white sticking to the yolk. Pat dry. 
-                                <span>2.</span> Wrap the yolk with the lotus paste. 
-                                <span>3.</span> Then roll it into a ball. Set aside.  
-                            </p>
+                            <div class="list-instructions">
+                                <p><span>1.</span> Wash the salted egg yolk with water to remove the white sticking to the yolk. Pat dry.</p>
+                                <p><span>2.</span> Wrap the yolk with the lotus paste. </p>
+                                <p><span>3.</span> Then roll it into a ball. Set aside.  </p>
+                            </div>
                           </div>
-                          <div class="carousel-item">
+                          <div class="carousel-item container-fluid">
                             <h3>Wrapping</h3>
-                            <p> <span>1.</span> Roll out the pastry in between two plastic sheets or cling wraps. 
-                                <span>2.</span> Remove the cling film on top, fold the pastry toward the filling.
-                                <span>3.</span> Pinch away the excess pastry where the pastry is double folded to ensure consistent thickness. 
-                                <span>4.</span> Roll the mooncake with your palms to form a ball. 
-                            </p>
+                            <div class="list-instructions">
+                                <p><span>1.</span> Roll out the pastry in between two plastic sheets or cling wraps.</p>
+                                <p><span>2.</span> Remove the cling film on top, fold the pastry toward the filling.</p>
+                                <p><span>3.</span> Pinch away the excess pastry where the pastry is double folded to ensure consistent thickness. </p>
+                                <p><span>4.</span> Roll the mooncake with your palms to form a ball. </p>
+                            </div>
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -91,12 +101,12 @@
                 </div>
             </div>
         </section>
-
-        <footer>
-            <p>Developed by Kristine de Jesus</p>
+        <footer class="border-solid">
+            <p>Recipe from 
+                <a href="https://tasteasianfood.com/mooncake-recipe/">Taste of Asian Food</a>
+            </p>
         </footer>
     </main>
-    
 
 
     <!-- JavaScript Bootstrap -->
