Disable carousel auto-play

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <img src="https://thumbs.dreamstime.com/b/delicious-mooncake-mid-autumn-food-black-white-delicious-mooncake-mid-autumn-food-isometric-cartoon-vector-illustration-155954739.jpg" alt="Mooncake Illustration">
         </div>
         <section class="content">
-            <div class="content-wrapper">
+            <div class="ingredients-wrapper">
                 <h2 class="border-solid">Ingredients</h2>
                 <div class="ingredients border-solid">
                     <h2>Dough</h2>
-                    <ul>
+                    <ul class="mb-2">
                         <li>60g golden syrup</li>
                         <li>1/4 tsp lye water (kansui)</li>
                         <li>24g vegetable oil</li>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="instructions">
                     <h2 class="border-solid">Instructions</h2>
-                    <div id="carouselExampleControls" class="carousel carousel-dark slide border-solid" data-bs-ride="false">
+                    <div id="carouselExampleControls" class="carousel carousel-dark slide border-solid" data-bs-interval="false">
                         <div class="carousel-inner">
                           <div class="carousel-item active container-fluid">
                             <h3>For the dough:</h3>
