Change p to div in footer

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             </div>
         </section>
         <footer class="border-solid">
-            <p>Recipe from 
-                <a href="https://tasteasianfood.com/mooncake-recipe/">Taste of Asian Food </a> |
-                <a href="https://desenio.com/us/posters-prints/typography-and-quotes/pancake-recipe-poster">Design Inspiration</a>
-            </p>
+            <div>
+                Recipe from  <a href="https://tasteasianfood.com/mooncake-recipe/">Taste of Asian Food </a> | 
+                Design inspiration from <a href="https://desenio.com/us/posters-prints/typography-and-quotes/pancake-recipe-poster"> Desenio</a>
+            </div>
         </footer>
     </main>
 
