Add nav at index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     <main>
+        <nav class="mb-2 border-solid">
+            <ul class="m-2">
+                <a class="mooncake-recipe" href="#index.html">Mooncake</a> |
+                <a href="hopia.html">Hopia</a> |
+                <a href="brownie.html">Brownie</a>
+            </ul>
+        </nav>
+
         <header>
             <h1 class="border-solid small-header">Easy Recipe For</h1>
             <h1 class="border-solid">Mooncake</h1>
@@ -24,7 +32,7 @@
         <div class="mooncake-img">
             <img src="https://thumbs.dreamstime.com/b/delicious-mooncake-mid-autumn-food-black-white-delicious-mooncake-mid-autumn-food-isometric-cartoon-vector-illustration-155954739.jpg" alt="Mooncake Illustration">
         </div>
-        <section class="content">
+        <div class="content">
             <div class="ingredients-wrapper">
                 <h2 class="border-solid">Ingredients</h2>
                 <div class="ingredients border-solid">
@@ -100,7 +108,7 @@
                       </div>
                 </div>
             </div>
-        </section>
+        </div>
         <footer class="border-solid">
             <div>
                 Recipe from  <a href="https://tasteasianfood.com/mooncake-recipe/">Taste of Asian Food </a> | 
