--- a/mooncake.html
+++ b/mooncake.html
@@ -7,17 +7,17 @@
 
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./mooncake.css">
 
-    <title>Moon Cake Recipe</title>
+    <title>Mooncake Recipe</title>
 </head>
 <body>
     <main>
         <nav class="mb-2 border-solid">
-            <ul class="m-2">
-                <a class="mooncake-recipe" href="#index.html">Mooncake</a> |
-                <a href="hopia.html">Hopia</a> |
-                <a href="brownie.html">Brownie</a>
+            <ul class="mb-0 p-0">
+                <a class="mooncake-recipe" href="./mooncake.html">Mooncake</a> |
+                <a href="./tanghulu.html">Tanghulu</a> |
+                <a href="./brownie.html">Brownie</a>
             </ul>
         </nav>
 
