Change mooncake.html to index.html

--- a/brownie.html
+++ b/brownie.html
@@ -15,7 +15,7 @@
     <main>
         <nav class="mb-2 border-solid">
             <ul class="mb-0 p-0">
-                <a class="mooncake-recipe" href="./mooncake.html">Mooncake</a> |
+                <a class="mooncake-recipe" href="./index.html">Mooncake</a> |
                 <a href="./tanghulu.html">Tanghulu</a> |
                 <a href="./brownie.html">Brownie</a>
             </ul>
